@@ -56,6 +56,10 @@ char		*freefare_get_tag_uid (MifareTag tag);
 void		 freefare_free_tag (MifareTag tag);
 void		 freefare_free_tags (MifareTag *tags);
 
+const char	*freefare_strerror (MifareTag tag);
+int		 freefare_strerror_r (MifareTag tag, char *buffer, size_t len);
+void		 freefare_perror (MifareTag tag, const char *string);
+
 int		 mifare_ultralight_connect (MifareTag tag);
 int		 mifare_ultralight_disconnect (MifareTag tag);
 
@@ -295,7 +299,6 @@ struct mifare_desfire_file_settings {
 
 int		 mifare_desfire_connect (MifareTag tag);
 int		 mifare_desfire_disconnect (MifareTag tag);
-uint8_t	 	 mifare_desfire_get_last_error (MifareTag tag);
 
 int		 mifare_desfire_authenticate (MifareTag tag, uint8_t key_no, MifareDESFireKey key);
 int		 mifare_desfire_change_key_settings (MifareTag tag, uint8_t settings);
@@ -346,8 +349,6 @@ MifareDESFireKey mifare_desfire_3des_key_new_with_version (uint8_t value[16]);
 uint8_t		 mifare_desfire_key_get_version (MifareDESFireKey key);
 void		 mifare_desfire_key_set_version (MifareDESFireKey key, uint8_t version);
 void		 mifare_desfire_key_free (MifareDESFireKey key);
-
-const char	*mifare_desfire_error_lookup (uint8_t error);
 
 uint8_t		*tlv_encode (const uint8_t type, const uint8_t *istream, uint16_t isize, size_t *osize);
 uint8_t		*tlv_decode (const uint8_t *istream, uint8_t *type, uint16_t *size);
