@@ -15,8 +15,8 @@
 .\"
 .\" $Id: mifare_desfire.3 495 2010-07-26 21:48:18Z rtartiere@il4p.fr $
 .\"
-.Dd September 3, 2010
-.Dt MIFARE_DESFIRE_ERROR 3
+.Dd September 28, 2010
+.Dt FREEFARE_ERROR 3
 .Os
 .\"  _   _
 .\" | \ | | __ _ _ __ ___   ___
@@ -25,8 +25,10 @@
 .\" |_| \_|\__,_|_| |_| |_|\___|
 .\"
 .Sh NAME
-.Nm mifare_desfire_error_lookup
-.Nd Mifare DESFire Error Management Functions.
+.Nm freefare_strerror ,
+.Nm freefare_strerror_r ,
+.Nm freefare_perror
+.Nd Error Reporting Functions.
 .\"  _     _ _
 .\" | |   (_) |__  _ __ __ _ _ __ _   _
 .\" | |   | | '_ \| '__/ _` | '__| | | |
@@ -44,7 +46,11 @@ Mifare card manipulation library (libfreefare, \-lfreefare)
 .Sh SYNOPSIS
 .In freefare.h
 .Ft "const char *"
-.Fn mifare_desfire_error_lookup "uint8_t code"
+.Fn freefare_strerror "MifareTag tag"
+.Ft "int"
+.Fn freefare_strerror_r "MifareTag tag" "char *buffer" "size_t len"
+.Ft "void"
+.Fn freefare_strerror "MifareTag tag" "char *string"
 .\"  ____                      _       _   _
 .\" |  _ \  ___  ___  ___ _ __(_)_ __ | |_(_) ___  _ __
 .\" | | | |/ _ \/ __|/ __| '__| | '_ \| __| |/ _ \| '_ \
@@ -53,9 +59,26 @@ Mifare card manipulation library (libfreefare, \-lfreefare)
 .\"                             |_|
 .Sh DESCRIPTION
 The
-.Fn mifare_desfire_error_lookup
-functions returns the error string corresponding to the provided error
-.Vt code .
+.Fn freefare_strerror
+functions returns the error string corresponding to the last PCD or PICC error
+encounred using
+.Vt tag .
+.Pp
+The
+.Fn freefare_strerror_r
+functions does the same as
+.Fn freefare_strerror
+but the error message is copied into
+.Vt buffer
+for a maximum size of
+.Vt len
+chars.
+.Pp
+The
+.Fn freefare_strerror
+function displays the last PCD or PICC error encounred using
+.Vt tag
+to stderr.
 .\"  ____      _                                 _
 .\" |  _ \ ___| |_ _   _ _ __ _ __   __   ____ _| |_   _  ___  ___
 .\" | |_) / _ \ __| | | | '__| '_ \  \ \ / / _` | | | | |/ _ \/ __|
@@ -63,8 +86,10 @@ functions returns the error string corresponding to the provided error
 .\" |_| \_\___|\__|\__,_|_|  |_| |_|   \_/ \__,_|_|\__,_|\___||___/
 .\"
 .Sh RETURN VALUES
-The functions always succeeds.  If an invalid error code is provided, a
-corresponding message is returned.
+.Fn freefare_strerror
+returns the error message, while
+.Fn freefare_strerror_r
+returns 0 on success, -1 on failure.
 .\"  ____                    _
 .\" / ___|  ___  ___    __ _| |___  ___
 .\" \___ \ / _ \/ _ \  / _` | / __|/ _ \
@@ -73,7 +98,6 @@ corresponding message is returned.
 .\"
 .Sh SEE ALSO
 .Xr freefare 3 ,
-.Xr mifare_desfire 3
 .\"     _         _   _
 .\"    / \  _   _| |_| |__   ___  _ __ ___
 .\"   / _ \| | | | __| '_ \ / _ \| '__/ __|
